# Apple-Metal-SPV

./: .gitignore  CMakeLists.txt  main.cpp
Shaders/: AAPLShaders.metal  base.metal  vadd.spv
include/: AppleMetal.hpp  MetalLibraryLoader.hpp  SPIRV_Loader.hpp
src/: SPIRV_Loader.cpp
